# chatgpt-cli

./: README.md  chatgpt.py  config.yaml  pyproject.toml
chatgpt_cli/: cli.py
chatgpt_cli/tests/: test_chat_context.py
